# QuickQL

./: .coverage  .gitignore  PUBLISHING.md  README.md  examples.py  main.py  pyproject.toml  release.py  run_tests.py  setup_dev.py  verify_build.py
.github/workflows/: ci.yml
src/quickql/: __init__.py  builder.py
tests/: __init__.py  conftest.py  test_edge_cases.py  test_integration.py  test_query_basic.py  test_query_building.py
